[project]
name = "LaMer"
version = "0.1.0"
description = "A Text Style Transfer Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ruibo Liu", email = "ruibo.liu.gr@dartmouth.edu"},
]
keywords = ["text style transfer", "reinforcement learning", "NLP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tqdm",
    "numpy>=1.20.0",
    "pandas",
    "scikit-learn",
    "transformers>=4.20.0",
    "torch>=1.9.0",
    "sentence-transformers",
    "spacy",
    "SceneGraphParser",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-bugbear",
    "yapf",
    "isort",
    "pytest",
    "pytest-cov",
    "mypy",
    "pydocstyle",
    "wandb>=0.12.0",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/DapangLiu/LaMer"
Paper = "https://arxiv.org/abs/2204.08123"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["LaMer"]

[tool.flake8]
max-line-length = 87
ignore = ["B305", "W504", "B006", "B008"]
exclude = [".git", "log", "__pycache__", "docs", "build", "dist", "*.egg-info"]

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
column_limit = 87
blank_line_before_nested_class_or_def = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 87

[tool.mypy]
files = "LaMer/**/*.py"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydocstyle]
ignore = ["D100", "D102", "D104", "D105", "D107", "D203", "D213", "D401", "D402"]

[tool.pytest.ini_options]
testpaths = ["test"]
